--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!-- End of home section -->
 
     <!-- Begin of description section -->
-    <div class="section section-candidates" data-section="candidates">
+    <div class="section section-description" data-section="description">
         <section class="content clearfix">
 
             <div class="c-left">
