--- a/index.html
+++ b/index.html
@@ -27,20 +27,10 @@
     <!-- Vendor CSS style -->
     <link rel="stylesheet" href="css/pageloader.css">
     <link rel="stylesheet" href="css/vendor/all.css">
-    <!-- Uncomment below to load individualy vendor CSS -->
-    <!--
-    <link rel="stylesheet" href="./css/foundation.min.css">
-    <link rel="stylesheet" href="./js/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="./js/vendor/jquery.fullpage.min.css">
-    <link rel="stylesheet" href="./js/vegas/vegas.min.css">
-    <link rel="stylesheet" href="./js/owl-carousel/owl.carousel.css">
-    -->
 
     <!-- Main CSS files -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/custom.css">
-    <!-- alt layout -->
-    <!--<link rel="stylesheet" href="./css/style-color4.css">-->
 
     <script src="js/vendor/modernizr-2.7.1.min.js"></script>
 
@@ -99,22 +89,46 @@
                 <span class="title">Description</span>
             </a>
         </li>
-        <li data-menuanchor="numbers">
-            <a href="#numbers">
+        <li data-menuanchor="overview">
+            <a href="#overview">
                 <i class="icon lnr lnr-dice"></i>
-                <span class="title">Numbers</span>
+                <span class="title">Overview</span>
             </a>
         </li>
-        <li data-menuanchor="sighting-content">
-            <a href="#sighting-content">
+        <li data-menuanchor="shape">
+            <a href="#shape">
                 <i class="icon lnr lnr-eye"></i>
-                <span class="title">Content</span>
+                <span class="title">Shape</span>
             </a>
         </li>
         <li data-menuanchor="quality">
             <a href="#quality">
                 <i class="icon lnr lnr-checkmark-circle"></i>
                 <span class="title">Quality</span>
+            </a>
+        </li>
+        <li data-menuanchor="military">
+            <a href="#military">
+                <i class="icon lnr lnr-bus"></i>
+                <span class="title">Military</span>
+            </a>
+        </li>
+        <li data-menuanchor="seasons">
+            <a href="#seasons">
+                <i class="icon lnr lnr-leaf"></i>
+                <span class="title">Seasons</span>
+            </a>
+        </li>
+        <li data-menuanchor="isolation">
+            <a href="#isolation">
+                <i class="icon lnr lnr-alarm"></i>
+                <span class="title">Isolation</span>
+            </a>
+        </li>
+        <li data-menuanchor="about">
+            <a href="#about">
+                <i class="icon lnr lnr-flag"></i>
+                <span class="title">About</span>
             </a>
         </li>
     </ul>
@@ -163,6 +177,7 @@
                          style="display: flex;flex-direction: column;align-items: center;justify-content: space-between;">
                         <div class="desc">
                             <p class="btn home-subtitle">NUFORC's data explain us everything about aliens</p>
+                            <p class="little-text">Study led by : CHEMOUL Léa CLUNIAT Philippine GANNE Antoine GARCIA Iago MARIE-NELLY Raphaël ROCCHIA Alicia</p>
                         </div>
 
                     </div>
@@ -200,12 +215,12 @@
     </div>
     <!-- End of description section -->
 
-    <!-- Begin of number section -->
-    <div class="section section-numbers" data-section="numbers">
+    <!-- Begin of overview section -->
+    <div class="section section-overview" data-section="overview">
         <section class="content clearfix">
             <div class="c-wrapper">
                 <header class="c-header">
-                    <h2>Numbers</h2>
+                    <h2>Overview :  UFO sightings in the US (2012 - 2014)</h2>
                 </header>
             </div>
             <div class="iframe">
@@ -218,11 +233,11 @@
     </div>
     <!-- End of number section -->
     <!-- Begin of content section -->
-    <div class="section section-sighting-content" data-section="sighting-content">
+    <div class="section section-shape" data-section="shape">
         <section class="content clearfix">
             <div class="c-wrapper">
                 <header class="c-header">
-                    <h2>Content</h2>
+                    <h2>What do UFOs look like ?</h2>
                 </header>
             </div>
             <div class="iframe">
@@ -239,7 +254,7 @@
         <section class="content clearfix">
             <div class="c-wrapper">
                 <header class="c-header">
-                    <h2>Quality</h2>
+                    <h2>Can we trust the testimonials ?</h2>
                 </header>
             </div>
             <div class="iframe">
@@ -251,8 +266,140 @@
         </section>
     </div>
     <!-- End of quality section -->
+    <!-- Begin of military section -->
+    <div class="section section-military" data-section="military">
+        <section class="content clearfix">
+            <div class="c-wrapper">
+                <header class="c-header">
+                    <h2>What is happening near to the military bases ?</h2>
+                </header>
+            </div>
+            <div class="iframe">
+                <iframe id="frame4"
+                        width="1140" height="541.25"
+                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSectione487b999c463d781f1bd&navContentPaneEnabled=false&filterPaneEnabled=false"
+                        frameborder="0" allowFullScreen="true"></iframe>
+            </div>
+        </section>
+    </div>
+    <!-- End of military section -->
+    <!-- Begin of seasons section -->
+    <div class="section section-seasons" data-section="seasons">
+        <section class="content clearfix">
+            <div class="c-wrapper">
+                <header class="c-header">
+                    <h2>Are the sightings seasonal ?</h2>
+                </header>
+            </div>
+            <div class="iframe">
+                <iframe id="frame5"
+                        width="1140" height="541.25"
+                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSectione67ac563290c4e4daecd2&navContentPaneEnabled=false&filterPaneEnabled=false"
+                        frameborder="0" allowFullScreen="true"></iframe>
+            </div>
+            <div class="iframe">
+                <iframe id="frame6"
+                        width="1140" height="541.25"
+                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSection1e9be0941e4c82c1f73f&navContentPaneEnabled=false&filterPaneEnabled=false"
+                        frameborder="0" allowFullScreen="true"></iframe>
+            </div>
+        </section>
+    </div>
+    <!-- End of seasons section -->
+    <!-- Begin of isolation section -->
+    <div class="section section-isolation" data-section="isolation">
+        <section class="content clearfix">
+            <div class="c-wrapper">
+                <header class="c-header">
+                    <h2>Are they isolated cases ?</h2>
+                </header>
+            </div>
+            <div class="iframe">
+                <iframe id="frame7"
+                        width="1140" height="541.25"
+                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSection9ad983359e54808a6c93&navContentPaneEnabled=false&filterPaneEnabled=false"
+                        frameborder="0" allowFullScreen="true"></iframe>
+            </div>
+        </section>
+    </div>
+    <!-- End of isolation section -->
 
+    <!-- Begin of about section -->
+    <div class="section section-customers" data-section="about">
+        <section class="content clearfix">
 
+            <div class="c-left">
+                <div class="c-wrapper">
+                    <header class="c-header">
+                        <h2>About this study</h2>
+                    </header>
+                </div>
+            </div>
+
+            <ul class="c-features row small-up-1 medium-up-2 large-up-2">
+
+                <!-- item -->
+                <li class="column anim">
+                    <div class="item-desc">
+                        <div class="desc about-description">
+                            <p>
+                               This study is about UFO's reports done in USA between 2012 and 2014.
+                                In fact, the USA take UFO question very seriously and
+                                the National UFO research center (NUFORC) have been collected more
+                                than 100 000 reports since 1950. To led this study, our team made an analysis
+                                of needs, then clean the data and integrate it in a data warehouse.
+                                On this website you can find the reporting work.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <!-- item -->
+                <li class="column anim">
+                    <div class="item-desc">
+                        <h3 class="title">Context</h3>
+                        <div class="desc">
+                           <p>
+                               In the USA, aliens are the default explanation for UFOs. There are a lot of examples
+                               of americans' fascination for plot theory involving aliens. Last one was about the
+                               Area 51, more than 2 millions people planed to assault this military base because
+                               they feared aliens were hiding there. That's why our team led this study, to know
+                               if UFOs can be aliens or just fireworks, military base exercises ...
+                           </p>
+                        </div>
+                    </div>
+                </li>
+                <!-- item -->
+                <li class="column anim" style="margin-bottom: 20px;">
+                    <div class="item-desc">
+                        <h3 class="title">Stack</h3>
+                        <div class="desc">
+                            <ul>
+                                <li>SGBD : MySQL</li>
+                                <li>ETL : Talend</li>
+                                <li>Reporting : Power BI</li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <!-- item -->
+                <li class="column anim">
+                    <div class="item-desc">
+                        <h3 class="title">Data base</h3>
+                        <div class="desc">
+                            <p>
+                               Our team use the NUFORC's data which contains all the UFO's reports with their
+                                date, hour, duration, location ... We complete these information with the binge alcohol
+                                use, the marijuana consumption and the mental illness in the country. We add US military
+                                bases location, united states codes and US holiday to refine our analysis.
+
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <!-- End of about section -->
 
 
 </main>
