--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <li data-menuanchor="isolation">
             <a href="#isolation">
                 <i class="icon lnr lnr-alarm"></i>
-                <span class="title">Isolation</span>
+                <span class="title">Credibility</span>
             </a>
         </li>
         <li data-menuanchor="about">
@@ -294,7 +294,7 @@
             <div class="iframe">
                 <iframe id="frame5"
                         width="1140" height="541.25"
-                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSectione67ac563290c4e4daecd2&navContentPaneEnabled=false&filterPaneEnabled=false"
+                        src="https://app.powerbi.com/reportEmbed?reportId=b009874f-2fd7-4bfb-a5a9-2049d60702b5&autoAuth=true&ctid=654b4463-2e7e-4dee-b5b1-c828bfd6195e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldCJ9&pageName=ReportSection67ac563290c4e4daecd2&navContentPaneEnabled=false&filterPaneEnabled=false"
                         frameborder="0" allowFullScreen="true"></iframe>
             </div>
             <div class="iframe">
